[package]
name = "homebox-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
log4rs = { version = "1.0", features = ["json_encoder"] }
structopt = "0.3"
actix-web = { version = "4.0.0-beta.9", default-features = false, features = [ "cookies", "compress-brotli", "compress-gzip", "rustls" ] }
actix-session = "0.5.0-beta.2"
async-graphql-actix-web = { git = "https://github.com/async-graphql/async-graphql", branch = "actix-web-v4-beta" }
async-graphql = { git = "https://github.com/async-graphql/async-graphql", branch = "actix-web-v4-beta", features = [ "log", "chrono", "uuid" ] }
uuid = { version = "0.8", features = [ "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = [ "serde_derive" ] }
serde_yaml = "0.8"
rocksdb = "0.17"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite", "macros", "migrate", "chrono", "uuid" ] }
