[package]
name = "homebox-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.43"
log = "0.4"
env_logger = "0.9"
log4rs = { version = "1.0", features = ["json_encoder"] }
structopt = "0.3"
actix-web = { version = "4.0.0-beta.21", default-features = false, features = [ "cookies", "compress-brotli", "compress-gzip", "rustls" ] }
actix-session = "0.5.0-beta.7"
async-graphql-actix-web = "3.0.27"
async-graphql = { version = "3.0.27", features = [ "log", "chrono", "uuid" ] }
uuid = { version = "0.8", features = [ "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = [ "serde_derive" ] }
serde_yaml = "0.8"
rocksdb = "0.17"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite", "macros", "migrate", "chrono", "uuid" ] }
datamatrix = "0.2.1"
png = "0.17.2"

[build-dependencies]
funty = "~1.1" # workaround for issue where bitvec and funty have a conflict with certain versions
