[package]
name = "homebox-server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.43"
log = "0.4"
env_logger = "0.9"
log4rs = { version = "1.0", features = ["json_encoder"] }
structopt = "0.3"
actix-web = { version = "4.1.0", default-features = false, features = [ "macros", "cookies", "compress-brotli", "compress-gzip", "rustls" ] }
actix-session = { version = "0.7.1", features = ["cookie-session"] }
async-graphql-actix-web = "4.0.6"
async-graphql = { version = "4.0.6", features = [ "log", "chrono", "uuid" ] }
uuid = { version = "1.1.2", features = [ "v4" ] }
chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1.0", features = [ "serde_derive" ] }
serde_yaml = "0.9.2"
rocksdb = "0.18.0"
sqlx = { version = "0.6.0", features = [ "runtime-actix-rustls", "sqlite", "macros", "migrate", "chrono", "uuid" ] }
datamatrix = "0.3.0"
png = "0.17.2"

# [build-dependencies]
# funty = "~1.1" # workaround for issue where bitvec and funty have a conflict with certain versions
